compiler/tests/fail/x86-64/unaligned-sse-padd.jazz
export fn padd(reg ptr u8[17] a) -> reg u128 {
  reg u128 z = a.[#unaligned:u128 0];
  z = #PADD_16u8(z, a.[#unaligned:u128 1]);
  return z;
}
